--- a/parts/footer.jade
+++ b/parts/footer.jade
@@ -11,7 +11,7 @@ footer
 				input(type="text" placeholder="Enter your email")
 				button(role="button") OK
 		.contacts
-			address Kiev, Ukraine, 02140, Bazhana Ave 24/1, Office 118
+			address Kiev, Ukraine, 02140, Bazhana Ave 24/1
 			p
 				span Tel:
 				a(href="tel:380955914765") +38 099 4612335
