--- a/services/index.jade
+++ b/services/index.jade
@@ -94,8 +94,8 @@ html(lang="en")
 							.option-name Quality
 							.option-checkbox.checked
 						.slide-option.button
-							button(role="button")
-								a(href="/outsource") Get more info
+							a(href="/services/outsource")
+								button(role="button") Get more info
 						.slide-option.footer
 							a(href="#") Get Started Now
 					.slide
@@ -148,8 +148,8 @@ html(lang="en")
 							.option-name Quality
 							.option-checkbox.checked
 						.slide-option.button
-							button(role="button")
-								a(href="/outstaff") Get more info
+							a(href="/services/outstaff")
+								button(role="button") Get more info
 						.slide-option.footer
 							a(href="#") Get Started Now
 					.slide
@@ -202,8 +202,8 @@ html(lang="en")
 							.option-name Quality
 							.option-checkbox.checked
 						.slide-option.button
-							button(role="button")
-								a(href="/relocation") Get more info
+							a(href="/services/relocation")
+								button(role="button") Get more info
 						.slide-option.footer
 							a(href="#") Get Started Now
 
