--- a/index.jade
+++ b/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include parts/head
-	body
+	body#about-page
 		include parts/header
 		include parts/mobile-nav
 
@@ -10,6 +10,7 @@ html(lang="en")
 				h1.title Welcome to Uneed!
 				h2.sub-title 
 					| Lorem ipsum dolor sit amet. Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+			.scroll-down
 
 		section#info.flex.align-ver-center
 			.container
@@ -23,21 +24,24 @@ html(lang="en")
 				.service-description
 					h1.title.dark.service-title Development of the Project
 					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-					button(role="button") Get more info
+					a(href="/services/outsource")
+						button(role="button") Get more info
 
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
 				.service-description
 					h1.title.dark.service-title Dedicated Development Team
 					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-					button(role="button") Get more info
+					a(href="/services/outstaff")
+						button(role="button") Get more info
 
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
 				.service-description
 					h1.title.dark.service-title Developer for relocation
 					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-					button(role="button") Get more info
+					a(href="/services/relocation")
+						button(role="button") Get more info
 
 		section#about-services.flex.align-ver-center
 			.container
