--- a/parts/head.jade
+++ b/parts/head.jade
@@ -7,6 +7,6 @@ head
 	meta(name="author" content="Kirill Buga")
 	title Uneed Web - Software Development Company
 	link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet")
-	link(rel="shortcut icon" href="favicon.ico")
+	link(rel="shortcut icon" href="/favicon.ico")
 	link(href="/css/index.css" rel="stylesheet")
 	link(rel='stylesheet' href='/bower_components/swipeshow/jquery.swipeshow.css')
