--- a/css/index.css
+++ b/css/index.css
@@ -667,9 +667,14 @@ footer .copyright.desktop {
   height: 20rem;
   position: relative;
   background-image: url("/photos/landing.jpg");
-  background-size: cover;
+  background-size: 1200px;
   background-position: 50% 25%;
   background-repeat: no-repeat;
+}
+@media screen and (min-width: 768px) {
+  #service-page #landing {
+    background-size: cover;
+  }
 }
 #service-page #switcher {
   margin: 0 1rem;
@@ -689,8 +694,12 @@ footer .copyright.desktop {
   letter-spacing: 0.3px;
   text-transform: uppercase;
   position: relative;
+  display: none;
 }
-#service-page #switcher h2:after {
+#service-page #switcher h2.active {
+  display: block;
+}
+#service-page #switcher h2.active:after {
   content: '';
   width: 11rem;
   height: 2px;
@@ -701,9 +710,30 @@ footer .copyright.desktop {
   bottom: -12px;
   margin: auto;
 }
+@media screen and (min-width: 768px) {
+  #service-page #switcher {
+    justify-content: center;
+    width: 722px;
+    margin: auto;
+  }
+  #service-page #switcher h2 {
+    margin: 1rem 0;
+    cursor: pointer;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    display: block;
+  }
+  #service-page #switcher h2.active:after {
+    width: 100%;
+    bottom: -17px;
+  }
+  #service-page #switcher #switch-left,
+  #service-page #switcher #switch-right {
+    display: none;
+  }
+}
 #service-page #description {
-  padding-top: 2rem;
-  padding-bottom: 4rem;
+  padding: 2rem 1rem 4rem 1rem;
 }
 #service-page #description h1 {
   font-size: 24px;
@@ -713,9 +743,66 @@ footer .copyright.desktop {
 #service-page #description h2 {
   text-align: left;
 }
+@media screen and (min-width: 768px) {
+  #service-page #description {
+    position: relative;
+  }
+  #service-page #description .container {
+    padding-right: 20rem;
+    width: 100%;
+  }
+  #service-page #description .container h1 {
+    font-size: 48px;
+    line-height: 1;
+    color: #0e1a35;
+  }
+  #service-page #description .container h2 {
+    font-size: 18px;
+    line-height: 1.33;
+  }
+  #service-page #description .container h2:nth-child(3) {
+    margin: 2rem 0;
+  }
+  #service-page #description .service-image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    height: 90%;
+    width: 22rem;
+    background-repeat: no-repeat;
+    background-size: 730px;
+    background-image: url("/images/png/outstaff.png");
+  }
+}
+@media screen and (min-width: 992px) {
+  #service-page #description .container {
+    width: 772px;
+    margin: auto;
+    padding-right: 13rem;
+  }
+  #service-page #description .service-image {
+    width: 30%;
+  }
+  #service-page #description h2.sub-title {
+    width: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  #service-page #description .container {
+    padding-right: 7rem;
+  }
+}
 #service-page #workflow {
   padding: 2rem 0;
   background-color: #0e1a35;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.3px;
+  color: #8492af;
+}
+#service-page #workflow.desktop {
+  display: none;
 }
 #service-page #workflow h1 {
   font-size: 18px;
@@ -730,10 +817,6 @@ footer .copyright.desktop {
 }
 #service-page #workflow ul li {
   position: relative;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 0.3px;
-  color: #8492af;
   padding: 0.5rem 0 0.5rem 1.5rem;
 }
 #service-page #workflow ul li:before {
@@ -746,31 +829,174 @@ footer .copyright.desktop {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
-  background-color: #f00;
 }
-#service-page #workflow ul .workflow-item-1:before {
+#service-page #workflow .color-1:before,
+#service-page #workflow .color-1 .ball,
+#service-page #workflow .color-1 .arrow,
+#service-page #workflow .color-1 .arrow:after {
   background-color: #e25245;
 }
-#service-page #workflow ul .workflow-item-2:before {
+#service-page #workflow .color-1 .workflow-item {
+  border-color: #e25245;
+}
+#service-page #workflow .color-2:before,
+#service-page #workflow .color-2 .ball,
+#service-page #workflow .color-2 .arrow,
+#service-page #workflow .color-2 .arrow:after {
   background-color: #cb5056;
 }
-#service-page #workflow ul .workflow-item-3:before {
+#service-page #workflow .color-2 .workflow-item {
+  border-color: #cb5056;
+}
+#service-page #workflow .color-3:before,
+#service-page #workflow .color-3 .ball,
+#service-page #workflow .color-3 .arrow,
+#service-page #workflow .color-3 .arrow:after {
   background-color: #b74e65;
 }
-#service-page #workflow ul .workflow-item-4:before {
+#service-page #workflow .color-3 .workflow-item {
+  border-color: #b74e65;
+}
+#service-page #workflow .color-4:before,
+#service-page #workflow .color-4 .ball,
+#service-page #workflow .color-4 .arrow,
+#service-page #workflow .color-4 .arrow:after {
   background-color: #a44c73;
 }
-#service-page #workflow ul .workflow-item-5:before {
+#service-page #workflow .color-4 .workflow-item {
+  border-color: #a44c73;
+}
+#service-page #workflow .color-5:before,
+#service-page #workflow .color-5 .ball,
+#service-page #workflow .color-5 .arrow,
+#service-page #workflow .color-5 .arrow:after {
   background-color: #8f4b82;
 }
-#service-page #workflow ul .workflow-item-6:before {
+#service-page #workflow .color-5 .workflow-item {
+  border-color: #8f4b82;
+}
+#service-page #workflow .color-6:before,
+#service-page #workflow .color-6 .ball,
+#service-page #workflow .color-6 .arrow,
+#service-page #workflow .color-6 .arrow:after {
   background-color: #794992;
 }
-#service-page #workflow ul .workflow-item-7:before {
+#service-page #workflow .color-6 .workflow-item {
+  border-color: #794992;
+}
+#service-page #workflow .color-7:before,
+#service-page #workflow .color-7 .ball,
+#service-page #workflow .color-7 .arrow,
+#service-page #workflow .color-7 .arrow:after {
   background-color: #6b479d;
 }
-#service-page #workflow ul .workflow-item-8:before {
+#service-page #workflow .color-7 .workflow-item {
+  border-color: #6b479d;
+}
+#service-page #workflow .color-8:before,
+#service-page #workflow .color-8 .ball,
+#service-page #workflow .color-8 .arrow,
+#service-page #workflow .color-8 .arrow:after {
   background-color: #5b46a8;
+}
+#service-page #workflow .color-8 .workflow-item {
+  border-color: #5b46a8;
+}
+@media screen and (min-width: 768px) {
+  #service-page #workflow.mobile {
+    display: none;
+  }
+  #service-page #workflow.desktop {
+    display: block;
+  }
+  #service-page #workflow.desktop .workflow-header {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+  }
+  #service-page #workflow.desktop .workflow-header h1 {
+    padding: 0 6rem;
+  }
+  #service-page #workflow.desktop .workflow-row {
+    display: flex;
+  }
+  #service-page #workflow.desktop .workflow-row .workflow-item {
+    position: relative;
+    width: 50%;
+    padding: 1.5rem 1rem;
+    margin: 1rem 0;
+  }
+  #service-page #workflow.desktop .workflow-row .workflow-item .ball {
+    position: absolute;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    top: -1.5rem;
+  }
+  #service-page #workflow.desktop .workflow-row .workflow-item .text {
+    position: absolute;
+    top: -1rem;
+    transform: translateY(-50%);
+  }
+  #service-page #workflow.desktop .workflow-row .workflow-item .arrow {
+    top: -1rem;
+    transform: translateY(-50%);
+    width: 4rem;
+    height: 1px;
+    position: absolute;
+  }
+  #service-page #workflow.desktop .workflow-row .workflow-item .arrow:after {
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    top: -2px;
+  }
+  #service-page #workflow.desktop .workflow-row.right {
+    justify-content: flex-end;
+  }
+  #service-page #workflow.desktop .workflow-row.right .workflow-item {
+    border-left-width: 1px;
+    border-left-style: solid;
+  }
+  #service-page #workflow.desktop .workflow-row.right .text {
+    left: 6rem;
+    text-align: left;
+  }
+  #service-page #workflow.desktop .workflow-row.right .ball {
+    left: 0;
+    transform: translateX(-50%);
+  }
+  #service-page #workflow.desktop .workflow-row.right .arrow {
+    left: 1rem;
+  }
+  #service-page #workflow.desktop .workflow-row.right .arrow:after {
+    left: 0;
+  }
+  #service-page #workflow.desktop .workflow-row.left {
+    justify-content: flex-start;
+  }
+  #service-page #workflow.desktop .workflow-row.left .workflow-item {
+    right: -1px;
+    border-right-width: 1px;
+    border-right-style: solid;
+  }
+  #service-page #workflow.desktop .workflow-row.left .text {
+    right: 6rem;
+    text-align: right;
+  }
+  #service-page #workflow.desktop .workflow-row.left .ball {
+    right: 0;
+    transform: translateX(50%);
+  }
+  #service-page #workflow.desktop .workflow-row.left .arrow {
+    right: 1rem;
+  }
+  #service-page #workflow.desktop .workflow-row.left .arrow:after {
+    right: 0;
+  }
 }
 #service-page #result {
   padding: 2rem 0 4rem 0;
@@ -782,6 +1008,12 @@ footer .copyright.desktop {
   width: 90%;
   padding-bottom: 1rem;
   margin: auto;
+}
+@media screen and (min-width: 768px) {
+  #service-page #result h2 {
+    padding-bottom: 2rem;
+    width: 35rem;
+  }
 }
 #contact-us-page header {
   width: 100%;
