--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -9,11 +9,14 @@ html(lang="en")
 
 		section#switcher
 			#switch-left
-			h2.sub-title Dedicated Development Team
+			h2.sub-title Development of the project
+			h2.sub-title.active Dedicated Development Team
+			h2.sub-title Developer for relocation
 			#switch-right
 
 		section#description
 			.container
+				.service-image
 				h1.title.dark Dedicated Development Team
 
 				h2.sub-title We tend to think that model of Decimated Development Team is one of the winning ones for the company which works on development of its own product and needs high-quality resources with good efficiency level at the same time with optimised budget. With this model you will have your dedicated employee or team, who works liked any other of your team members only remotely. This way you don’t have to take care of any organisational details like HR, office, technical equipment, but you receive the same result as from onsite team. 
@@ -23,20 +26,66 @@ html(lang="en")
 				a(href="/services")
 					button(role="button") Services comparison
 
-		section#workflow
+		section#workflow.mobile
 			.container
 				h1.title You do
 				ul.customer-workflow
-					li.workflow-item-1 Provide Technical Requirements for candidate 
-					li.workflow-item-2 Chat and make final decision
+					li.color-1 Provide Technical Requirements for candidate 
+					li.color-2 Chat and make final decision
 				h1.title We do
 				ul.uneed-workflow
-					li.workflow-item-3 Search the internal team and the market for the right candidate 
-					li.workflow-item-4 HR-team interviews to check personal skills and level of Engli.workflow-itemsh
-					li.workflow-item-5 Our best technical professionals interviews to check development skills 
-					li.workflow-item-6 Arrange the meeting with you and your team 
-					li.workflow-item-7 We set up start of the work and provide office space and technical equipment 
-					li.workflow-item-8 We deal with all every-day issues and questions with your team-member
+					li.color-3 Search the internal team and the market for the right candidate 
+					li.color-4 HR-team interviews to check personal skills and level of English
+					li.color-5 Our best technical professionals interviews to check development skills 
+					li.color-6 Arrange the meeting with you and your team 
+					li.color-7 We set up start of the work and provide office space and technical equipment 
+					li.color-8 We deal with all every-day issues and questions with your team-member
+
+		section#workflow.desktop
+			.container
+				.workflow-header
+					h1.title We do
+					h1.title You do
+				.workflow-row.right.color-1
+					.workflow-item
+						.ball
+						.arrow
+						.text Provide Technical Requirements for candidate 
+				.workflow-row.left.color-2
+					.workflow-item
+						.ball
+						.arrow
+						.text Search the internal team and the market for the right candidate 
+				.workflow-row.left.color-3
+					.workflow-item
+						.ball
+						.arrow
+						.text Search the internal team and the market for the right candidate 
+				.workflow-row.left.color-4
+					.workflow-item
+						.ball
+						.arrow
+						.text HR-team interviews to check personal skills and level of English
+				.workflow-row.left.color-5
+					.workflow-item
+						.ball
+						.arrow
+						.text Our best technical professionals interviews to check development skills 
+				.workflow-row.right.color-6
+					.workflow-item
+						.ball
+						.arrow
+						.text Chat and make final decision
+				.workflow-row.left.color-7
+					.workflow-item
+						.ball
+						.arrow
+						.text We set up start of the work and provide office space and technical equipment 
+				.workflow-row.left.color-8
+					.workflow-item
+						.ball
+						.arrow
+						.text We deal with all every-day issues and questions with your team-member
 
 		section#result
 			h1.title.dark Result
