--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -11,15 +11,15 @@ html(lang="en")
 			#switch-left
 			a(href="/services/outsource")
 				h2.sub-title Development of the project
-			a(href="/services/outstaff")
+			a(href="/services/outstaff").active
 				h2.sub-title Dedicated Development Team
-			a(href="/services/relocation").active
+			a(href="/services/relocation")
 				h2.sub-title Developer for relocation
 			#switch-right
 
 		section#description
 			.container
-				.service-image
+				.service-image.outstaff
 				h1.title.dark Dedicated Development Team
 
 				h2.sub-title We tend to think that model of Decimated Development Team is one of the winning ones for the company which works on development of its own product and needs high-quality resources with good efficiency level at the same time with optimised budget. With this model you will have your dedicated employee or team, who works liked any other of your team members only remotely. This way you don’t have to take care of any organisational details like HR, office, technical equipment, but you receive the same result as from onsite team. 
